added some id's

--- a/practice.html
+++ b/practice.html
@@ -6,16 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>
-        <bold>Coding Quiz!</bold>
-    </h1>
-    <p>Answer the following questions accurately and see how high of a core you can get! Answer incorrectly and there
-        will be a time penalty! Click the button to start!</p>
+    <div id="start">
+        <header>
+            <a id="highscore">View Highscores</a>
+            <div id="timer">75</div>
+        </header>
+        <h1>
+            <bold>Coding Quiz!</bold>
+        </h1>
+        <p>Answer the following questions accurately and see how high of a core you can get! Answer incorrectly and
+            there
+            will be a time penalty! Click the button to start!</p>
         <button>Start Quiz!</button>
-        <p id ="timer">75</p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
