--- a/practice.html
+++ b/practice.html
@@ -6,26 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <body>
-    <div id="start">
-        <header>
-            <a id="highscore">View Highscores</a>
-            <div id="timer">75</div>
-        </header>
+    <header id ="header">
+        <a id="highscore">View Highscores</a>
+        <div id="timer">75</div>
+    </header>
+
+    <div id="instruction">
         <h1>
             <bold>Coding Quiz!</bold>
         </h1>
-        <div id="donemessage"></div>
-        
         <p>Answer the following questions accurately and see how high of a core you can get! Answer incorrectly and
             there
             will be a time penalty! Click the button to start!</p>
-        <button>Start Quiz!</button>
     </div>
+
+
+
+    <div id= "quizpage">
+        <h2 id="question">Question placehoder</h2>
+        <ol id="choices">
+
+        </ol>
+    </div>
+
+
+    <div id="donemessage"></div>
+
+
+    <button id="start">Start Quiz!</button>
+    <button id="reset">RESET</button>
+
 
     <script src="questions.js"></script>
     <script src="practice.js"></script>
