--- a/practice.html
+++ b/practice.html
@@ -13,7 +13,7 @@
 <body>
     <header id ="header">
         <a id="highscore">View Highscores</a>
-        <div id="timer">75</div>
+        <div id="timer"></div>
     </header>
 
     <div id="instruction">
@@ -22,13 +22,13 @@
         </h1>
         <p>Answer the following questions accurately and see how high of a core you can get! Answer incorrectly and
             there
-            will be a time penalty! Click the button to start!</p>
+            will be a time penalty! Click the "Start Quiz" button now! Do it!</p>
     </div>
 
 
 
     <div id= "quizpage">
-        <h2 id="question">Question placeholder</h2>
+        <h2 id="question">Quiz Time!</h2>
         <ol id="choices">
 
         </ol>
